# DroughtMonitoringIran

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: 01_Ground_PET.ipynb  02_Ground_SPI_SPEI.ipynb  03_GEE_Precipitation.ipynb  07_GEE_Calculate_Indices.ipynb  08_GEE_Download_Raster.ipynb  10_Clustering_Stations.ipynb  10_Precipitation_Analysis.ipynb  11_Precipitation_Analysis.ipynb  12_Correlation_Matrix.ipynb  12_Drought_Models.ipynb  13_Drought_Models.ipynb  13_SPEI_SPI_Analysis.ipynb  14_Classifier_Drought_Model.ipynb  14_XGBoost_Drought_Model.ipynb  15_Regressor_Drought_Model.ipynb  16_Drought_Models.ipynb  17_RandomForestClassifier_ML.ipynb  18_ExtraTreesClassifier_ML.ipynb  19_GradientBoostingClassifier_ML.ipynb  1_EPT.ipynb  1_Ground_PET.ipynb  1_PET.ipynb  20_XGBClassifier_ML.ipynb  22_AdaBoostClassifier_ML.ipynb  24_GaussianNB_ML.ipynb  26_CatBoostClassifier_ML.ipynb  27_Selected_Classifier_ML.ipynb  2_SPEI.ipynb  3_Precipitation_Models.ipynb  3_Precipitation_Models_Data.ipynb  4_DI.ipynb  4_VI.ipynb  5_Combine_Date.ipynb  5_GEE_SPI_SPEI.ipynb  5_PET_MODIS.ipynb  6_Combine_Date.ipynb  6_GEE_NDVI_EVI_LST.ipynb  6_Main.ipynb  6_SPEI_Precip_Models.ipynb  7_Main.ipynb  (+5 more)
app/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
app/notebook/: 00_Ground_Data_Cleansing.ipynb  01_Ground_PET.ipynb  02_Ground_SPI_SPEI.ipynb  03_GEE_Precipitation.ipynb  04_GEE_PET.ipynb  05_GEE_SPI_SPEI.ipynb  06_GEE_Indices.ipynb  06_GEE_NDVI_EVI_LST.ipynb  07_Combine_Data.ipynb  08_Clustering_Stations.ipynb  09_Precipitation_Analysis.ipynb  (+23 more)
(+463 files in other folders)
