[project]
name = "droughtmonitoringiran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "earthengine-api>=1.6.3",
    "fastparquet>=2024.11.0",
    "geopandas>=1.1.1",
    "h5netcdf>=1.6.4",
    "imbalanced-learn>=0.14.0",
    "imblearn>=0.0",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.5",
    "kaleido>=1.0.0",
    "lightgbm>=4.6.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "netcdf4>=1.7.2",
    "notebook>=7.4.5",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyarrow>=21.0.0",
    "pyet>=1.3.1",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.1",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "shapely>=2.1.1",
    "skillmetrics>=1.2.4",
    "spei>=0.8.0",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "xarray>=2025.7.1",
    "xee>=0.0.20",
    "xgboost>=3.0.4",
]
